cabal-version:      2.4
name:               HaskpiDB
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             tknott95
maintainer:         tknott95@hotmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable HaskpiDB
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
      Colors

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
      base ^>=4.14.3.0,
      postgresql-simple >= 0.5.3.0,
      aeson >=2.1.1
    hs-source-dirs:   
      app, 
      app/libs
    default-language: Haskell2010
