cabal-version:      2.4
name:               HaskpiDB
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             tknott95
maintainer:         tknott95@hotmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable HaskpiDB
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
      Colors,
      Utils,
      Metadata,
      PSQL,
      Globals

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
      base ^>=4.16.4.0,
      postgresql-simple >= 0.5.3.0,
      aeson >=2.1.1,
      json >= 0.10,
      bytestring >= 0.11.3.1,
      utf8-string >= 1.0.2,
      text >= 2.0.1,
      -- lens-aeson >= 1.2.1,
      -- lens >= 5.1.1,
      servant >= 0.19.1,
      servant-server >= 0.18.3,
      -- wai >= 3.2.3,
      warp >= 3.3.23,
      transformers >= 0.4.2.0,
      monoid-subclasses >= 1.2.1,
      mtl >= 2.2.2,
      hex >= 0.1
  
    hs-source-dirs:   
      app, 
      app/Libs,
      app/Types
    default-language: Haskell2010
